# fastapi-gitaction

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
app/: main.py
tests/: test_app.py
