[project]
name = "fastapi-uv-app"
version = "0.1.0"
description = "FastAPI app with uv-managed environment, Docker, and CI/CD."
requires-python = ">=3.12"
authors = [{ name = "Your Name" }]
readme = "README.md"

# Runtime dependencies
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.1",
]

# Dev/test dependencies (install via `uv sync --extra dev`)
[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "httpx==0.27.0",
]

[tool.pytest.ini_options]
addopts = "-q"
log_cli = true

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"